// Copyright 2022 Datafuse Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package databend_proto;

import "user.proto";
import "table.proto";

enum BackgroundTaskState {
    BACKGROUND_TASK_STATE_STARTED = 0;
    BACKGROUND_TASK_STATE_DONE = 1;
    BACKGROUND_TASK_STATE_FAILED = 2;
}

enum BackgroundTaskType {
    BACKGROUND_TASK_TYPE_COMPACTION = 0;
    BACKGROUND_TASK_TYPE_VACUUM = 1;
}

message CompactionStats {
    uint64 ver = 100;
    uint64 min_reader_ver = 101;
    uint64 db_id = 1;
    uint64 table_id = 2;
    TableStatistics before_compaction_stats = 3;
    optional TableStatistics after_compaction_stats = 4;
    optional float total_compaction_time_secs = 5;
}

message VacuumStats {
    uint64 ver = 100;
    uint64 min_reader_ver = 101;
}

message BackgroundTaskIdent {
    uint64 ver = 100;
    uint64 min_reader_ver = 101;

    // The user this index belongs to
    string tenant = 1;

    // Task Id, unique id assigned to given task
    string task_id = 2;
}

message BackgroundTaskInfo {
    uint64 ver = 100;
    uint64 min_reader_ver = 101;
    optional string last_updated = 3;
    BackgroundTaskType task_type = 4;
    BackgroundTaskState task_state = 5;
    string message = 6;
    optional CompactionStats compaction_task_stats = 7;
    optional VacuumStats vacuum_stats = 8;

    // Audit
    optional UserIdentity creator = 90;
    string created_at = 91;
}